# oqt-mcp

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TIMEOUT_FIX_SUMMARY.md  VALIDATION_REPORT.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
config/: tool_permissions.default.json
docs/: MCP_CLIENT_COMPATIBILITY_FIX.md  architecture.md  auth_testing.md  cross_suite_alignment_2026.md  integration_orchestrators.md  observability.md  oecd_alignment_review_2025.md  quantitative_thresholds.md  regulatory_readiness_checklist.md  release_process.md  stakeholder_review_notes.md  testing.md  toolbox_webapi_overview.md
docs/integration_guides/: mcp_integration.md
docs/releases/: v0.2.0.md  v0.3.0.md
examples/agency_dossiers/acetone_grouping/: log.json  manifest.json  readAcrossSummary.json  summary.md
examples/agency_dossiers/acetone_hazard/: log.json  manifest.json  summary.md
examples/agency_dossiers/benzene_ad_gated/: log.json  manifest.json  summary.md
examples/exported_bundles/: grouping_bundle_manifest.json  hazard_summary_manifest.json
schemas/: README.md  oqtEndpointSummary.v1.json  oqtHazardEvidenceSummary.v1.json  oqtReadAcrossSummary.v1.json  oqtWorkflowRecord.v1.json
schemas/examples/: oqtEndpointSummary.v1.example.json  oqtHazardEvidenceSummary.v1.example.json  oqtReadAcrossSummary.v1.example.json  oqtWorkflowRecord.v1.example.json
scripts/: generate_agency_dossiers.py  generate_example_bundles.py  generate_validation_report.py
src/: version.py
src/api/: server.py
src/auth/: config.py  rbac.py  service.py
src/config/: settings.py
src/integrations/: __init__.py  oqt_assistant.py
src/mcp/: protocol.py  router.py
src/qsar/: __init__.py  client.py
src/tools/: hazard_contracts.py  provenance.py  registry.py
src/tools/implementations/: export_adapters.py  o_qt_qsar_tools.py  toolbox_discovery.py  toolbox_execution.py  uncertainty_thresholds.py  workflow_runner.py
src/utils/: audit.py  logging.py  pdf_generator.py  privacy.py  review.py  sanitization.py
tests/: __init__.py  test_portable_schemas.py
tests/api/: test_audit_middleware.py
tests/auth/: test_config.py  test_rbac.py  test_service.py
tests/integration/: test_qsar_live.py  test_tool_live_smoke.py
tests/mcp/: test_protocol.py
tests/qsar/: test_client.py
tests/regression/: _helpers.py  test_golden_grouping.py  test_golden_workflow.py
tests/regression/snapshots/: grouping_benzene.json  workflow_benzene.json
tests/tools/: test_export_adapters.py  test_hazard_contracts.py  test_o_qt_qsar_tools.py  test_toolbox_discovery.py  test_toolbox_execution.py  test_uncertainty_thresholds.py  test_workflow_runner_handoffs.py
tests/utils/: test_privacy.py  test_review.py  test_sanitization.py
