[tool.poetry]
name = "o-qt-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) Server for the O-QT OECD QSAR Toolbox"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.3.3"
python-json-logger = "^2.0.7"
authlib = "^1.3.0"
httpx = "^0.27.0"
# Add specific scientific libraries here as needed (e.g., pandas, numpy, rdkit for QSAR)

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
requests = "^2.31.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated"
]
