[project]
name = "o-qt-mcp-server"
version = "0.2.0"
description = "Specialized MCP workflow engine for the OECD QSAR Toolbox inside the ToxMCP suite"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "O-QT Team", email = "oss@senseibelbi.dev" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "pydantic>=2.7.1,<2.8.0",
    "pydantic-settings>=2.3.3,<2.4.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "authlib>=1.3.0,<2.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.urls]
Homepage = "https://github.com/ToxMCP/toxmcp"
Repository = "https://github.com/ToxMCP/oqt-mcp"
Documentation = "https://github.com/ToxMCP/oqt-mcp#readme"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
requests = "^2.31.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest-asyncio = "^0.23.0"
jsonschema = "^4.24.0"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated"
]
markers = [
    "integration: live QSAR Toolbox calls requiring QSAR_LIVE_TESTS=1"
]
